--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 DailyBank/target/
 DailyBank/.classpath
 DailyBank/.project
+DailyBank/.settings/org.eclipse.jdt.apt.core.prefs
+DailyBank/.settings/org.eclipse.jdt.core.prefs
+DailyBank/.settings/org.eclipse.jdt.core.prefs
+DailyBank/.settings/org.eclipse.jdt.core.prefs
+DailyBank/.classpath
+DailyBank/.classpath
+DailyBank/.settings/org.eclipse.jdt.core.prefs
