--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ DailyBank/.settings/org.eclipse.jdt.core.prefs
 DailyBank/.classpath
 DailyBank/.classpath
 DailyBank/.settings/org.eclipse.jdt.core.prefs
+DailyBank/.settings/org.eclipse.jdt.core.prefs
+DailyBank/.classpath
