--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ DailyBank/.classpath
 DailyBank/.settings/org.eclipse.jdt.core.prefs
 DailyBank/.settings/org.eclipse.jdt.core.prefs
 DailyBank/.classpath
+DailyBank/.settings/org.eclipse.jdt.core.prefs
+DailyBank/.settings/org.eclipse.jdt.core.prefs
