Batch relevés, pdf generation code refactor

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
 
 .metadata
 DailyBank/target/
+DailyBank/releves/*.pdf
 DailyBank/.classpath
-DailyBank/.project
 DailyBank/.settings/org.eclipse.jdt.apt.core.prefs
-DailyBank/.settings/org.eclipse.jdt.core.prefs
-DailyBank/.settings/org.eclipse.jdt.core.prefs
-DailyBank/.settings/org.eclipse.jdt.core.prefs
-DailyBank/.classpath
-DailyBank/.classpath
-DailyBank/.settings/org.eclipse.jdt.core.prefs
-DailyBank/.settings/org.eclipse.jdt.core.prefs
-DailyBank/.classpath
-DailyBank/.settings/org.eclipse.jdt.core.prefs
 DailyBank/.settings/org.eclipse.jdt.core.prefs
